# MOE-system-AQI

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  空品Bot_開發規格.md
config/: settings.example.yaml
core/: __init__.py  api_client.py  config.py  db.py  notifier.py  time_utils.py
scripts/: init_db.py  prune_old.py  scheduler.py  set_commands.py  verify_dataids.py
system_b_air/: alert.py  bot.py  daily_report.py  etl_forecast.py  etl_realtime.py  formatting.py  freshness.py  models.py  regions.py
tests/: conftest.py
tests/core/: test_api_client.py  test_config.py  test_db.py  test_notifier.py  test_plants.py  test_time_utils.py
tests/system_b/: test_alert.py  test_alert_persist.py  test_bot_helpers.py  test_etl_realtime.py  test_formatting.py  test_freshness.py  test_regions.py
